add steps to ASN3

--- a/README.qmd
+++ b/README.qmd
@@ -9,17 +9,15 @@ In this assignment you will use the functions that you have learned to replicate
 
 ![](T1.PNG){fig-align="center" width="400"}
 
-#### Step 1 (1 point)
+### Part 1: Create a balanced panel dataframe
 
-Declare that you will use the **tidyverse** package.
+Step 1: Declare that you will use the **tidyverse** and **knitr** package. **(2 points)**
 
 ```{r}
 
 ```
 
-#### Step 2 (2 points)
-
-Upload pollution emissions data from the year 2001 to 2007 into the environment and combine them together into one dataframe called **df.**
+Step 2: Upload pollution emissions data from the year 2001 to 2007 into the environment and combine them together into one dataframe called **df. (2 points)**
 
 ```{r}
 
@@ -29,17 +27,30 @@ Upload pollution emissions data from the year 2001 to 2007 into the environment 
 
 #### Answer: \_\_\_\_\_ tons per \_\_\_\_\_ (state/city/county) during the \_\_\_\_ months of each year.
 
-#### Step 3 (4 points)
-
-Create a new dataframe named **df2** which has the total **summertime** NOx, SO2, and CO2 emissions (in **thousand tons**) for each **County**, **State**, and **Year**. Note that the summer months include May through September.
+Step 3: Create a new dataframe named **df2** which has the total **summertime** NOx, SO2, and CO2 emissions (in **thousand tons**) for each **County**, **State**, and **Year**. Note that the summer months include May through September. **(4 points)**
 
 ```{r}
 
 ```
 
-#### Step 4 (1 point)
+#### **Question 2: The script below shows the number of observations per county. Ideally, a county should have 7 observations as there are 7 years of data. Why does Acadia Parish have only 6 observations? Why does Adams County have 35 observations? (2 points)**
 
-Upload the **counties_t2a.csv** file into the environment. Name the dataframe **counties**. This dataframe is the list of all counties that satisfies the selection criteria in the paper *Defensive Investments and the Demand for Air Quality: Evidence from the NOx Budget Program* as described below.
+#### Answer:
+
+```{r}
+#| eval: false
+head(table(df2$County))
+```
+
+Step 4: In this step, you will create a list of counties used in Deschenes et al. (2017).
+
+Step 4.1: First, you will need to upload *counties_list.csv*, which contains the list of every county in the United States, into the RStudio environment. Call the dataframe **counties**. **(1 point)**
+
+```{r}
+
+```
+
+Step 4.2: According to the paragraph below, Deschenes et al. (2017) analyzed units regulated by the Acid Rain Program. Create a new dataframe called **df3** from **df** which contains only units that were regulated by the Acid Rain Program. Note that these units have the value "**ARP**" or "**ARP, NBP**" in the Program.s. column. **(2 points)**
 
 ![](emit_data.JPG){fig-align="center" width="400"}
 
@@ -47,73 +58,75 @@ Upload the **counties_t2a.csv** file into the environment. Name the dataframe **
 
 ```
 
-#### Step 5
+Step 4.3: The script below keeps only counties used in the analysis by Deschenes et al. (2017).
 
-To make an accurate summary statistics table, we need to make a balanced panel with all the counties and year that we are interested in. The table will summarize data from all counties and all years.
+First, we created a vector called **st_arp** which contains states regulated by the Acid Rain Program. After that, we remove states regulated by the Acid Rain Program, but not states that are adjacent to the NBP states in a new vector called **st**. Afterward, a new dataframe called **counties2** which only contains states in **st** is created. You just have to run the code chunk below.
 
-This can be done by first creating a vector of all the years we are interested in. Afterward, we will use the **crossing** function to create a combination of all the counties and year we are interested in. Since we have 7 years and 2253 counties, the balanced panel will have 7 x 2,253 = 15,771 observations.
+```{r}
+#| eval: false
+st_arp<-unique(df3$State)
+
+drop<-c("WI", "MO", "ME", "NH", "VT", "GA", "MS", "IA")
+
+st<-st_arp[!st_arp %in% drop]
+
+counties2<-counties %>%
+  filter(State %in% st) 
+```
+
+Step 5: To make an accurate summary statistics table, we need to make a balanced panel with all the counties and year that we are interested in. The table will summarize data from all counties and all years.
+
+This can be done by first creating a vector of all the years we are interested in. Afterward, we will use the **crossing** function to create a combination of all the counties and year we are interested in. Since we have 7 years and 2253 counties, the balanced panel will have 7 x 2,542 = 17,794 observations.
 
 The code is shown below. You just have to run it.
 
 ```{r}
 #| eval: false
-
 Year<-seq(2001,2007,by=1)
 
-cy<-crossing(counties, Year)
+cy<-crossing(counties2, Year)
 ```
 
-Next, we will add the emissions data from **df2** into **cy**.
+Step 6: Next, we will add the emissions data from **df2** into **cy**.
 
-#### Question 2: What three variables do df2 and cy have in common? (3 points)
+#### Question 3: What three variables do df2 and cy have in common? (3 points)
 
 #### Answer:
 
-#### Step 6 (4 points)
-
-Add the emissions data from **df2** into **cy** by using the **merge** function by matching observations that has the same **State**, **County**, and **Year**.
-
-Name the merged dataframe **emit.**
+Step 6.1: Add the emissions data from **df2** into **cy** by using the **merge** function by matching observations that has the same **State**, **County**, and **Year**. Name the merged dataframe **emit.**
 
 Make sure that the dataframe **emit** has all the observations in **cy**, but not the observations in **df2** that does not match with **cy**.
 
-Hint: You learned how to do this in [this DataCamp video.](https://campus.datacamp.com/courses/joining-data-with-datatable-in-r/joining-multiple-datatables?ex=8)
+Hint: You learned how to do this in [this DataCamp video.](https://campus.datacamp.com/courses/joining-data-with-datatable-in-r/joining-multiple-datatables?ex=8) **(4 points)**
 
 ```{r}
 
 ```
 
-#### Step 7 (2 points)
-
-Create a new dataframe named **emit_mean** from **emit.**
-
-Replace all the NA values that the columns that represent NOx, SO2, and CO2 emissions with 0.
-
-Afterward, use the **summarize** and **mean** function to find the average NOx, SO2, and CO2 emissions across all counties and years. Name the variables **mean_NOx**, **mean_SO2**, and **mean_CO2**.
+Step 6.2: Create a new dataframe named **emit2** from **emit.** Replace all the NA values that the columns that represent NOx, SO2, and CO2 emissions with 0. You now have a balanced panel dataframe. **(1 point)**
 
 ```{r}
 
 ```
 
-#### Step 8 (2 points)
+### Part 2: Summarize emissions variables
 
-Create a new dataframe named **emit_sd** from **emit.**
-
-Replace all the NA values that the columns that represent NOx, SO2, and CO2 emissions with 0.
-
-Afterward, use the **summarize** and **sd** function to find the standard deviation of NOx, SO2, and CO2 emissions across all counties and years. Name the variables **sd_NOx**, **sd_SO2**, and **sd_CO2**.
+Step 1: Create a new dataframe called **emit_mean** from **emit2**. Use the **summarize** and **mean** function to find the average NOx, SO2, and CO2 emissions across all counties and years. Name the variables **mean_NOx**, **mean_SO2**, and **mean_CO2**. **(1 point)**
 
 ```{r}
 
 ```
 
-#### Step 9
+Step 2: Create a new dataframe called **emit_sd** from **emit.** Use the **summarize** and **sd** function to find the standard deviation of NOx, SO2, and CO2 emissions across all counties and years. Name the variables **sd_NOx**, **sd_SO2**, and **sd_CO2**. **(1 point)**
 
-We will use the **pivot_longer** function to format our results in table format of the original paper. The code is shown below. You just have to run it.
+```{r}
+
+```
+
+Step 3: We will use the **pivot_longer** function to format our results in table format of the original paper. The code is shown below. You just have to run it.
 
 ```{r}
 #| eval: false
-
 mean_long<-pivot_longer(emit_mean,
                         cols=1:3,
                         names_to = "Pollution emissions (000's of tons/summer)",
@@ -128,15 +141,13 @@ sd_long<-pivot_longer(emit_sd,
 
 T1a<-merge(mean_long, sd_long, 
            by="Pollution emissions (000's of tons/summer)") %>%
-  mutate(n=nrow(counties)) 
+  mutate(n=nrow(counties2)) 
 
-print(T1a)
+kable(T1a, digits=2)
 ```
 
-#### Question 3: Compare the mean of NOx, standard deviation of NOx, and counties with data to the numbers presented in the original paper. Which ones are greater? (3 points)
+Step 4: Check that your summary statistics are similar to the one in Deschenes et al. (2017).
 
-#### Answer:
+Step 5: Click Render to generate an md file of this document. **(1 point)**
 
-#### Step 10: Click Render to generate an html file of this document. **(1 point)**
-
-You have reached the end of the assignment. Save the Quarto document and push the completed assignment back into the GitHub repository.
+You have reached the end of the assignment. Save the files and push the completed assignment back into the GitHub repository.
